--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
   "dependencies": {
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.12",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "@types/styled-components": "^5.1.7",
     "copy-webpack-plugin": "^11.0.0",
     "postcss-preset-env": "^7.8.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-query": "^3.5.11",
+    "styled-components": "^5.2.1",
     "uninstall": "0.0.0"
   },
   "devDependencies": {
